--- a/action.yaml
+++ b/action.yaml
@@ -16,8 +16,10 @@ runs:
       shell: bash
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
-      shell: bash
-    - run: ${{ github.action_path }}/hello.sh
+      shell: bash      
+    - run: |
+        chmod +x hello.sh
+        ${{ github.action_path }}/hello.sh
       shell: bash
     # include an action in here  
     - uses: phwes/simple_hello_world@v1
